<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mi1"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/menu_1"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/mi2"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="@string/menu_2"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/mi3"
        android:icon="@drawable/ic_baseline_assignment_ind_24"
        android:title="@string/menu_3"
        app:showAsAction="ifRoom|withText" />
</menu>